--- a/templates/user/shop/shop.html
+++ b/templates/user/shop/shop.html
@@ -33,18 +33,19 @@
                 <div class="toolbox-right">
                     <div class="toolbox-sort">
                         <label for="sortby">Sort by:</label>
-                        <form id="shop-sorting" method="post" action="{% url "shopsort" %}">
+                        <form id="shop-sorting" method="post" action="{% url 'shopsort'%}">
                             {% csrf_token %}
                             <div class="select-custom">
-                                <select name="sortby" id="sortby" class="form-control">
-                                    <option value="LtoH" selected="selected">price low to high</option>
-                                    <option value="AtoZ">A to Z</option>
-                                    <option value="HtoL">price High to Low</option>
-                                    <option value="ZtoA">Z to A</option>
+                                <select name="sort_select" id="sortby" class="form-control">
+                                    <option value="all" selected="selected">SORT</option>
+                                    <option value="aplus" >A TO Z</option>
+                                    <option value="aminus">Z TO A</option>
+                                    <option value="priceminus">HIGH LOW PRICE</option>
+                                    <option value="priceplus">LOW TO HIGH PRICE</option>
 
                                 </select>
                             </div>
-                            <input type="hidden",name="auto_submit" value="true">
+                            <input type="hidden" name="auto_submit" value="true">
                         </form>
                     </div><!-- End .toolbox-sort -->
                 </div><!-- End .toolbox-right -->
@@ -393,15 +394,16 @@
 
             </aside><!-- End .sidebar-filter -->
 
-            <script>
-                document.addEventListener('DOMContentLoaded', function () {
-                    const statusSelect = document.getElementById('sort-select');
-                    
-                    statusSelect.addEventListener('change', function () {
-                        document.getElementById('shop-sorting').submit();
-                    });
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const statusSelect = document.getElementById('sort-select');
+                
+                statusSelect.addEventListener('change', function () {
+                    document.getElementById('shop-sorting').submit();
                 });
-            </script>
-            
+            });
+        </script>
+        
 
 {% endblock  %} 
