--- a/templates/user/checkout.html
+++ b/templates/user/checkout.html
@@ -57,7 +57,7 @@
         <div class="container">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-                {% comment %} <li class="breadcrumb-item"><a href="{% url 'Shop' %}">Shop</a></li> {% endcomment %}
+                <li class="breadcrumb-item"><a href="{% url 'shop' %}">Shop</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Checkout</li>
             </ol>
            
